<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/procesRow_procesName_textView"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/nazwa_procesu" />

        <TextView
            android:id="@+id/procesRow_amount_textView"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/ilosc" />

        <TextView
            android:id="@+id/procesRow_description_textView"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:textColor="#000000"
            android:text="@string/opis_procesu"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>


        <LinearLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ListView
                android:id="@+id/list_steps"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>


    </LinearLayout>

